# Upscaler

./: .clang-format  .clang-tidy  .gitignore  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.Player.csproj  Assembly-CSharp.csproj  DLSSPlugin.sln  PPv2URPConverters.csproj  SeparateAssembly.csproj  Unity.Burst.CodeGen.csproj  Unity.Burst.Tests.UnitTests.csproj  Unity.Burst.csproj  Unity.Mathematics.Player.csproj  Unity.RenderPipeline.Universal.ShaderLibrary.Player.csproj  Unity.RenderPipelines.Core.Editor.Tests.csproj  Unity.RenderPipelines.Core.Runtime.Player.csproj  Unity.RenderPipelines.Core.Runtime.csproj  Unity.RenderPipelines.Core.ShaderLibrary.Player.csproj  Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.Player.csproj  Unity.RenderPipelines.Universal.Editor.csproj  Unity.RenderPipelines.Universal.Runtime.csproj  Unity.RenderPipelines.Universal.Shaders.Player.csproj  Unity.RenderPipelines.Universal.Shaders.csproj  Unity.Rider.Editor.csproj  Unity.ShaderGraph.Editor.Tests.csproj  Unity.Sysroot.Linux_x86_64.csproj  Unity.SysrootPackage.Editor.csproj  Unity.Toolchain.Linux-x86_64.EditorTests.csproj  Unity.Toolchain.Linux-x86_64.csproj  UnityEditor.UI.EditorTests.csproj  UnityEditor.UI.csproj  UnityEngine.UI.Player.csproj
Assets/: DLSSPluginScript.cs  NativePluginLoader.cs
Documentation/: OfflineManual.odt
PluginSource/: .gitignore  CMakeLists.txt  Logger.cpp  Logger.hpp  Plugin.cpp  Plugin.hpp  main.cpp
PluginSource/FrameGenerator/: FSR_FrameGenerator.cpp  FSR_FrameGenerator.hpp  FrameGenerator.cpp  FrameGenerator.hpp
PluginSource/GraphicsAPI/: DX11.cpp  DX11.hpp  DX12.cpp  DX12.hpp  GraphicsAPI.cpp  GraphicsAPI.hpp  NoGraphicsAPI.cpp  NoGraphicsAPI.hpp  Vulkan.cpp  Vulkan.hpp
PluginSource/Upscaler/: DLSS.cpp  DLSS.hpp  DLSS_Upscaler.cpp  DLSS_Upscaler.hpp  FSR2.cpp  FSR2.hpp  FSR3.cpp  FSR3.hpp  FSR_Upscaler.cpp  FSR_Upscaler.hpp  NoUpscaler.cpp  NoUpscaler.hpp  None_Upscaler.cpp  None_Upscaler.hpp  Upscaler.cpp  Upscaler.hpp  XeSS.cpp  XeSS.hpp  XeSS_Upscaler.cpp  XeSS_Upscaler.hpp
PluginSource/ffx_sdk/FidelityFX/gpu/: ffx_common_types.h
PluginSource/ffx_sdk/FidelityFX/gpu/fsr1/: ffx_fsr1.h
PluginSource/ffx_sdk/FidelityFX/gpu/fsr3/: ffx_fsr3_common.h
PluginSource/ffx_sdk/FidelityFX/host/: ffx_api.h  ffx_types.h
PluginSource/ffx_sdk/FidelityFX/host/backends/vk/: ffx_api_vk.hpp
PluginSource/ffx_sdk/ffx_api/: ffx_api.h
PluginSource/ffx_sdk/ffx_api/dx12/: ffx_api_dx12.h
PluginSource/ffx_sdk/ffx_api/vk/: ffx_api_vk.h
PluginSource/ffx_sdk/lib/Windows_x86_64/: ffx_backend_dx12_x86_64d.lib  ffx_backend_vk_x86_64.lib  ffx_backend_vk_x86_64d.lib  ffx_frameinterpolation_x86_64.lib  ffx_frameinterpolation_x86_64d.lib  ffx_fsr1_x86_64d.lib  ffx_fsr2_x86_64d.lib  ffx_fsr3_x86_64d.lib  ffx_fsr3upscaler_x86_64d.lib  ffx_opticalflow_x86_64d.lib
PluginSource/fsr2_sdk/: ffx_types.h
PluginSource/fsr2_sdk/vk/shaders/: ffx_fsr2_accumulate_pass_080f4a9c44d289d6cc4c91020348a3ab.h  ffx_fsr2_accumulate_pass_101f7ffd3ecb492c920a9d39fdd05062.h  ffx_fsr2_accumulate_pass_178fe21420aab5a3648e6dadd8c3bbb8.h  ffx_fsr2_accumulate_pass_20bef52ac6fc23147fc8a14de4c3360c.h  ffx_fsr2_accumulate_pass_212b3386c1c51eefaed92641a4c55beb.h  ffx_fsr2_accumulate_pass_25ab69dd4903c738d3e36a0e6cfa5a41.h  ffx_fsr2_accumulate_pass_302d2f2010f97aa2de34e9d5641e26e7.h  ffx_fsr2_accumulate_pass_32c6a4b3b2349c21418101e4cf64ee0b.h  ffx_fsr2_accumulate_pass_42037c3c0f66521c00a2a9ab011d14f4.h  ffx_fsr2_accumulate_pass_4487f761bb56feb891979dd36da2a5b8.h  ffx_fsr2_accumulate_pass_469db73eddd3da9f65837fffb244a8e6.h  ffx_fsr2_accumulate_pass_47ec87a279034d3ba533e082f570dbf2.h  ffx_fsr2_accumulate_pass_49088158a7f8a1cbd13535b5d2fb5bdd.h  ffx_fsr2_accumulate_pass_5b0f3d895e9000c3a62f414adc4d9ef6.h  ffx_fsr2_accumulate_pass_5caca019fff23c7a2ae45fdb62a762db.h  ffx_fsr2_accumulate_pass_5ced0af5a3123af4f42d126594e9eba6.h  ffx_fsr2_accumulate_pass_5ed5867f8a1a4f2f1f0f0b24167afb82.h  ffx_fsr2_accumulate_pass_6a9088a5ea28d19aa4a5e6c28b97df73.h  ffx_fsr2_accumulate_pass_6ae5ccd5d8b1537936b4be1f7a46400e.h  ffx_fsr2_accumulate_pass_6f4aebb3bbd5d12d81a3611a22bf06ad.h  ffx_fsr2_accumulate_pass_6f607109fd6c4cfd3a405a28a9567423.h  ffx_fsr2_accumulate_pass_7761d8e8d3f6bbb9801df7134e1d193e.h  ffx_fsr2_accumulate_pass_7a3f7c49e69c084b12dfbeb92c66072c.h  ffx_fsr2_accumulate_pass_976b8c62592e4cc21b32e6140fdaf781.h  ffx_fsr2_accumulate_pass_98b517e598323b9934b458fa6f993fc6.h  ffx_fsr2_accumulate_pass_996bb4d6da4f911c10ff99c33cfea8ce.h  ffx_fsr2_accumulate_pass_9a72e148d3e1319e5dcdb6a15167c7f3.h  ffx_fsr2_accumulate_pass_9e22e85e8316f4db369ecf8a8b8a0d0b.h  ffx_fsr2_accumulate_pass_9e70068122a122ae94f1d0663286a39f.h  ffx_fsr2_accumulate_pass_a40ef54947291cb1cdf2c7d148e76a69.h  ffx_fsr2_accumulate_pass_a7103c9d7965ebca042a83d07586fcf4.h  ffx_fsr2_accumulate_pass_aa33570ed9e409c2323d126bd87764f7.h  ffx_fsr2_accumulate_pass_b553dae0d6ed7008bb34c12348ce7846.h  ffx_fsr2_accumulate_pass_bd18774523cd69beb2c915e03af8a293.h  ffx_fsr2_accumulate_pass_c155236dc5a5159e66b3ff38eb92d375.h  ffx_fsr2_accumulate_pass_c4557ffb767209eda6b599344c29dbee.h  ffx_fsr2_accumulate_pass_c5a33da92e2d40d395c22c4115298d25.h  ffx_fsr2_accumulate_pass_c5c738c4099bb177d9801d26f33d24a8.h  ffx_fsr2_accumulate_pass_c85ebe62739a2495c741dcc56a2ff06f.h  ffx_fsr2_accumulate_pass_ced9791b1dbaf517497bba8cf7c1712e.h  (+85 more)
PluginSource/fsr_sdk/FidelityFX/gpu/fsr3/: ffx_fsr3_callbacks_hlsl.h  ffx_fsr3_resources.h
PluginSource/fsr_sdk/lib/Windows_x86_64/: ffx_backend_dx12_x86_64.lib  ffx_fsr1_x86_64.lib  ffx_fsr2_x86_64.lib  ffx_fsr3_x86_64.lib  ffx_fsr3upscaler_x86_64.lib  ffx_opticalflow_x86_64.lib
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset
Source/: .gitignore  CMakeLists.txt  main.cpp
Source/Unity/: IUnityGraphicsVulkan.h
URPUnityProject/: .gitignore
UnityProject/: .gitignore  Assembly-CSharp-firstpass.csproj  Assembly-CSharp.Player.csproj  Assembly-CSharp.csproj  DLSSPlugin.sln  OverloadedFunctionPointers.csproj  PPv2URPConverters.csproj  SeparateAssembly.csproj  Unity.Burst.CodeGen.csproj  Unity.Burst.Editor.Tests.csproj  (+46 more)
(+286 files in other folders)
